# MacTmp

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: github_testing.yml  python-publish.yml
MacTmp/: __init__.py
